tests/specs/ecosystem/aralroca/diff_dom_streaming/0_1_0.test
aralroca/diff-dom-streaming/0.1.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS2304 [ERROR]: Cannot find name 'Node'.
export default function diff(oldNode: Node, reader: ReadableStreamDefaultReader): Promise<void> {
                                      ~~~~
    at file://<tmpdir>/src/index.ts:1:39

